// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > file > downloadFile > success 1`] = `
{
  "Body": {
    "pipe": [MockFunction spy],
  },
}
`;

exports[`services > file > getFilesByIds > success 1`] = `
[
  {
    "avScan": [],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByIds > success with scans mapped 1`] = `
[
  {
    "_id": "123",
    "avScan": [
      {
        "fileId": "123",
      },
      {
        "fileId": "123",
      },
    ],
    "example": "file",
  },
  {
    "_id": "321",
    "avScan": [
      {
        "fileId": "321",
      },
    ],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByModel > success 1`] = `
[
  {
    "example": "file",
  },
]
`;

exports[`services > file > removeFile > success 1`] = `
{
  "id": undefined,
  "modelId": "testModel",
}
`;

exports[`services > file > uploadFile > success 1`] = `
{
  "aggregate": [MockFunction spy],
  "avScan": {
    "aggregate": [MockFunction spy],
    "delete": [MockFunction spy],
    "find": [MockFunction spy] {
      "calls": [
        [
          {
            "fileId": undefined,
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOne": [MockFunction spy],
  },
  "delete": [MockFunction spy],
  "find": [MockFunction spy],
  "findOneAndDelete": [MockFunction spy],
  "group": [MockFunction spy],
  "id": undefined,
  "match": [MockFunction spy],
  "save": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
  "size": 100,
}
`;

exports[`services > file > uploadFile > virus scan initialised 1`] = `
{
  "aggregate": [MockFunction spy],
  "avScan": {
    "aggregate": [MockFunction spy],
    "delete": [MockFunction spy],
    "find": [MockFunction spy] {
      "calls": [
        [
          {
            "fileId": undefined,
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOne": [MockFunction spy],
  },
  "delete": [MockFunction spy],
  "find": [MockFunction spy],
  "findOneAndDelete": [MockFunction spy],
  "group": [MockFunction spy],
  "id": undefined,
  "match": [MockFunction spy],
  "save": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
  "size": 100,
}
`;

exports[`services > file > uploadFile > virus scan initialised 2`] = `[]`;
